--- a/style.css
+++ b/style.css
@@ -27,3 +27,10 @@ header {
 .tittel {
   position: center;
 }
+.disablecopypaste {
+-webkit-user-select: none; Chrome/Safari/Opera
+-moz-user-select: none; Firefox
+
+-ms-user-select: none; Internet Explorer/Edge
+
+-webkit-touch-callout: none; iOS Safari}
