--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
 
+
+
 .hlogo {
   width: 50px;
   height: 50px;
@@ -45,6 +47,7 @@ header {
     background-color: #f4f4f4;
     margin: 0;
     padding: 0;
+    padding-bottom: 55px;
   }
   header {
     background-color: #333;
@@ -88,3 +91,22 @@ header {
   img {
     padding: 10px;
   }
+
+  /*  Scrollbar */
+
+/* width */
+::-webkit-scrollbar {
+  width: 14px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  border-radius: 0px;
+  background: #333;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgba(85, 85, 85, 1);
+  border-radius: 10px;
+}
